--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,10 @@ $darkFontLi: #3d3e3e;
 h1, h2, h3, h4 {
     margin: 0;
 }
+
+.logo {
+    width: 90px;
+}
 .sponsor {
     //background: grey;
     img {
